# inspect-otel

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/inspect_otel/: __init__.py  cli.py  config.py  hook.py  translate.py
src/inspect_otel/adapters/: __init__.py
tests/: conftest.py  test_cli.py  test_config.py  test_hook.py  test_phase2.py  test_translate.py
