[project]
name = "inspect-otel"
version = "0.1.0"
description = "OpenTelemetry exporter for Inspect AI — emit traces from eval runs into any OTLP-compatible backend"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Eoin H", email = "eoin.hurrell@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "inspect-ai>=0.3",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[project.scripts]
inspect-otel = "inspect_otel.cli:main"

[project.entry-points."inspect_ai.hooks"]
inspect_otel = "inspect_otel.hook:OtelHook"

[project.urls]
Repository = "https://github.com/eoin/inspect-otel"
Issues = "https://github.com/eoin/inspect-otel/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "ruff>=0.11",
    "pyright>=1.1",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["inspect_otel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.coverage.run]
source = ["inspect_otel"]

[tool.coverage.report]
fail_under = 80
show_missing = true
